# qgroundcontrol

./: .gitignore  .gitmodules  CMakeLists.txt  QGCCommon.pri  QGCPostLinkCommon.pri  README.md  body.md  deb_build.sh  js.qrc  qgcimages.qrc  qgroundcontrol.pro  qgroundcontrol.qrc  run_now.sh
.github/workflows/: create_daily_release.yml  create_release.yml  ubuntu-20.04-workflow-qmake.yml  ubuntu-20.04-workflow.yml  ubuntu-22.04-workflow.yml  ubuntu-latest-workflow.yml
deploy/: create_linux_appimage.sh  deb-Dockerfile-ci  deb_build_test.sh  deb_maker.sh  qgroundcontrol-start.sh  qt.conf
deploy/docker/: Dockerfile-build-linux  Dockerfile-build-linux-release  build-release.sh  build.sh  install-qt-linux.sh  run.sh
deploy/package/: deb_maker.sh
deploy/seabot_qgc/: .gitignore
deploy/services/: control  postinst  seabot_qgc.service
src/: CMakeLists.txt  QGCApplication.cc
src/AnalyzeView/: LogDownloadController.cc
src/FactSystem/: ParameterManager.cc  ParameterManager.h
src/FlightDisplay/: FlyView.qml  FlyViewWidgetLayer.qml
src/Joystick/: Joystick.cc  Joystick.h
src/MissionManager/: PlanMasterController.h
src/PayLoad/: CMakeLists.txt  CompanionMaintainance.qml  ControlButton.qml  Payload.qml  PayloadJoystickSettings.qml  PayloadStatus.qml  SeabotX.qml  SeabotY.qml  olympios.qml  payload.cc  payload.h  sonar_launch.sh
src/PlanView/: PlanToolBarIndicators.qml
src/Vehicle/: Vehicle.cc  Vehicle.h  VehicleLinkManager.cc
src/VehicleSetup/: SetupView.qml
src/comm/: LinkInterface.cc  LinkManager.cc  LinkManager.h  MAVLinkProtocol.cc
(+26 files in other folders)
